--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bookshelf": "^0.10.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "knex": "^0.11.9",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
