--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
+    "ejs-locals": "^1.0.2",
     "express": "~4.13.1",
     "knex": "^0.11.9",
     "morgan": "~1.6.1",
