--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.3.3",
     "ejs-locals": "^1.0.2",
     "express": "~4.13.1",
+    "express-session": "^1.14.0",
     "knex": "^0.11.9",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
