--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "fruitmart",
-    "version": "0.1.3",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.13.2",
-        "bookshelf": "^0.10.0",
-        "cookie-parser": "~1.3.5",
-        "debug": "~2.2.0",
-        "ejs": "~2.3.3",
-        "ejs-locals": "^1.0.2",
-        "express": "~4.13.1",
-        "express-session": "^1.14.0",
-        "knex": "^0.11.9",
-        "morgan": "~1.6.1",
-        "serve-favicon": "~2.3.0",
-        "pg": "~1.0.0"
-    }
+  "name": "fruitmart",
+  "version": "0.1.3",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "bookshelf": "^0.10.0",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "ejs-locals": "^1.0.2",
+    "express": "~4.13.1",
+    "express-session": "^1.14.0",
+    "knex": "^0.11.9",
+    "morgan": "~1.6.1",
+    "mysql": "^2.11.1",
+    "pg": "^6.1.0",
+    "serve-favicon": "~2.3.0"
+  }
 }
