--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "bookshelf": "^0.10.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "ejs": "~2.3.3",
     "ejs-locals": "^1.0.2",
     "express": "~4.13.1",
     "express-session": "^1.14.0",
@@ -18,6 +17,7 @@
     "morgan": "~1.6.1",
     "mysql": "^2.11.1",
     "pg": "^6.1.0",
+    "pug": "^2.0.3",
     "serve-favicon": "~2.3.0"
   },
   "description": "Introduction:",
